Closed
Bug 1822801
Opened 2 years ago
Closed 2 years ago
Crash in [@ mozilla::net::nsHttpChannel::OnTransportStatus]
Categories
(Core :: Networking, defect, P1)
Core
Networking
Tracking
()
RESOLVED
FIXED
113 Branch
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox111 | --- | unaffected |
firefox112 | --- | unaffected |
firefox113 | --- | fixed |
People
(Reporter: RyanVM, Assigned: valentin)
References
(Regression)
Details
(Keywords: crash, regression, Whiteboard: [necko-triaged])
Crash Data
Attachments
(1 file)
High volume on Nightly today.
Crash report: https://crash-stats.mozilla.org/report/index/da71fd3b-661d-4d12-8cf4-5e8be0230316
MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(false) (NS_SUCCEEDED(socketTransport->GetEffectiveTRRMode(&mEffectiveTRRMode)))
Top 10 frames of crashing thread:
0 xul.dll mozilla::net::nsHttpChannel::OnTransportStatus netwerk/protocol/http/nsHttpChannel.cpp:8196
1 xul.dll nsTransportStatusEvent::Run netwerk/base/nsTransportUtils.cpp:75
2 xul.dll mozilla::RunnableTask::Run xpcom/threads/TaskController.cpp:553
2 xul.dll mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:867
3 xul.dll mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:698
3 xul.dll mozilla::TaskController::ProcessPendingMTTask xpcom/threads/TaskController.cpp:464
3 xul.dll mozilla::TaskController::InitializeInternal::<lambda_5>::operator const xpcom/threads/TaskController.cpp:188
3 xul.dll mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:188:7'>::Run xpcom/threads/nsThreadUtils.h:547
4 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1239
5 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:477
Flags: needinfo?(valentin.gosu)
Comment 1•2 years ago
|
||
Set release status flags based on info from the regressing bug 1805372
status-firefox111:
--- → unaffected
status-firefox112:
--- → unaffected
status-firefox113:
--- → affected
status-firefox-esr102:
--- → unaffected
Assignee | ||
Updated•2 years ago
|
Assignee: nobody → valentin.gosu
Severity: -- → S2
Flags: needinfo?(valentin.gosu)
Priority: -- → P1
Whiteboard: [necko-triaged]
Assignee | ||
Comment 2•2 years ago
|
||
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/mozilla-central/rev/ca5fed1e3908
socketTransport->GetEffectiveTRRMode may fail r=kershaw a=crash-fix
![]() |
||
Updated•2 years ago
|
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
Reporter | ||
Comment 4•2 years ago
•
|
||
Would be good if we could get a test for this. Maybe as part of D172547?
Flags: in-testsuite?
You need to log in
before you can comment on or make changes to this bug.
Description
•