Bug 1822801 - socketTransport->GetEffectiveTRRMode may fail r=kershaw a=crash-fix

Differential Revision: https://phabricator.services.mozilla.com/D172788